button not working

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
               
       </div>
       <div class="grid__user__scale">
-        <a href="" class="grid__user__scaleButton">Daily</a>
-        <a href="" class="grid__user__scaleButton">Weekly</a>
-        <a href="" class="grid__user__scaleButton">Monthly</a>
+        <a href="" class="grid__user__scaleButton daily_btn">Daily</a>
+        <a href="" class="grid__user__scaleButton weekly_btn" >Weekly</a>
+        <a href="" class="grid__user__scaleButton monthly_btn">Monthly</a>
       </div>
     </div>
-    <div class="grid__item">
+    <div class="grid__item grid__item_Work">
       <div class="grid__item__content">
         <div class="grid__item__content__header">
           <h2 class="grid__item__content__header__category">
@@ -43,15 +43,15 @@
           </h2>
           <a class="grid__item__content__header__more" href="#">...</a>
         </div>
-        <p class="grid__item__content__time">
+        <p class="grid__item__content__time work_time">
           5hrs
         </p>
-        <p class="grid__item__content__previousTime">
+        <p class="grid__item__content__previousTime work_previous">
           Previous - 7hrs
         </p>
       </div>
     </div>
-    <div class="grid__item">
+    <div class="grid__item grid__item_Play">
       <div class="grid__item__content">
         <div class="grid__item__content__header">
           <h2 class="grid__item__content__header__category">
@@ -59,15 +59,15 @@
           </h2>
           <a class="grid__item__content__header__more" href="#">...</a>
         </div>
-        <p class="grid__item__content__time">
+        <p class="grid__item__content__time play_time">
           1hr
         </p>
-        <p class="grid__item__content__previousTime">
+        <p class="grid__item__content__previousTime play_previous">
           Previous - 2hrs
         </p>
       </div>
     </div>
-    <div class="grid__item">
+    <div class="grid__item grid__item_Study">
       <div class="grid__item__content">
         <div class="grid__item__content__header">
           <h2 class="grid__item__content__header__category">
@@ -75,15 +75,15 @@
           </h2>
           <a class="grid__item__content__header__more" href="#">...</a>
         </div>
-        <p class="grid__item__content__time">
+        <p class="grid__item__content__time study_time">
           0hrs 
         </p>
-        <p class="grid__item__content__previousTime">
+        <p class="grid__item__content__previousTime study_previous">
           Previous - 1hr
         </p>
       </div>
     </div>
-    <div class="grid__item">
+    <div class="grid__item grid__item_Exercise">
       <div class="grid__item__content">
         <div class="grid__item__content__header">
           <h2 class="grid__item__content__header__category">
@@ -91,15 +91,15 @@
           </h2>
           <a class="grid__item__content__header__more" href="#">...</a>
         </div>
-        <p class="grid__item__content__time">
+        <p class="grid__item__content__time exercise_time">
           1hr
         </p>
-        <p class="grid__item__content__previousTime">
+        <p class="grid__item__content__previousTime exercise_previous">
           Previous - 1hr 
         </p>
       </div>
     </div>
-    <div class="grid__item">
+    <div class="grid__item grid__item_Social">
       <div class="grid__item__content">
         <div class="grid__item__content__header">
           <h2 class="grid__item__content__header__category">
@@ -107,15 +107,15 @@
           </h2>
           <a class="grid__item__content__header__more" href="#">...</a>
         </div>
-        <p class="grid__item__content__time">
+        <p class="grid__item__content__time social_time">
           1hr
         </p>
-        <p class="grid__item__content__previousTime">
+        <p class="grid__item__content__previousTime social_previous">
           Previous - 3hrs
         </p>
       </div>
     </div>
-    <div class="grid__item">
+    <div class="grid__item grid__item_SelfCare">
       <div class="grid__item__content">
         <div class="grid__item__content__header">
           <h2 class="grid__item__content__header__category">
@@ -123,10 +123,10 @@
           </h2>
           <a class="grid__item__content__header__more" href="#">...</a>
         </div>
-        <p class="grid__item__content__time">
+        <p class="grid__item__content__time care_time">
           0hrs
         </p>
-        <p class="grid__item__content__previousTime">
+        <p class="grid__item__content__previousTime care_previous">
           Previous - 1hr
         </p>
       </div>
