--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
               
       </div>
       <div class="grid__user__scale">
-        <a href="" class="grid__user__scaleButton daily_btn">Daily</a>
-        <a href="" class="grid__user__scaleButton weekly_btn" >Weekly</a>
-        <a href="" class="grid__user__scaleButton monthly_btn">Monthly</a>
+        <button class="grid__user__scaleButton daily_btn active">Daily</button>
+        <button class="grid__user__scaleButton weekly_btn">Weekly</button>
+        <button class="grid__user__scaleButton monthly_btn">Monthly</button>
       </div>
     </div>
     <div class="grid__item grid__item_Work">
